--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script>
+    <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script> -->
 
 
     <!-- your app's js -->
@@ -46,11 +46,18 @@
     <script src="js/controllers/calendar-schedule.js"></script>
     <script src="js/controllers/dash.js"></script>
     <script src="js/controllers/account.js"></script>
+    <script src="js/controllers/login.js"></script>
     <script src="js/controllers/chat.js"></script>
     <script src="js/controllers/chat-detail.js"></script>
     <script src="js/controllers/location.js"></script>
     <script src="js/controllers/manager.js"></script>
+    <script src="js/controllers/manager-services.js"></script>
+    <script src="js/controllers/manager-portfolio.js"></script>
     <script src="js/controllers/manager-appointment.js"></script>
+
+    <script src="js/services/artist.js"></script>
+    <script src="js/services/service.js"></script>
+    <script src="js/services/portfolio.js"></script>
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
