--- a/www/index.html
+++ b/www/index.html
@@ -25,12 +25,10 @@
     -->
 
     <!-- ionic/angularjs js -->
-    <!-- <script src="lib/pubnub/dist/web/pubnub.min.js"></script> -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <!-- <script src="lib/pubnub-angular/dist/pubnub-angular.js"></script> -->
     <script src="lib/parse-1.6.14.min.js"></script>
-    <script src="https://cdn.pubnub.com/pubnub-3.7.21.js"></script>
-    <script src="https://cdn.pubnub.com/sdk/pubnub-angular/pubnub-angular-3.2.1.js"></script>
+    <script src="lib/pubnub-3.7.21.js"></script>
+    <script src="lib/pubnub-angular-3.2.1.js"></script>
     <script src="lib/ionic-calendar/dist/js/calendar-tpls.min.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/angular-moment.min.js"></script>
@@ -38,7 +36,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script> -->
+     <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script> 
 
 
     <!-- your app's js -->
