added ionic.io package

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     </script>-->
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link rel="stylesheet" href="lib/ionic-calendar/dist/css/calendar.min.css"/>
+    <link rel="stylesheet" href="lib/ionic-calendar/dist/css/calendar.min.css">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
