--- a/www/index.html
+++ b/www/index.html
@@ -30,13 +30,15 @@
     <script src="lib/pubnub-3.7.21.js"></script>
     <script src="lib/pubnub-angular-3.2.1.js"></script>
     <script src="lib/ionic-calendar/dist/js/calendar-tpls.min.js"></script>
+    <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>    
+    <script src="lib/ionic-rating/ionic-rating.min.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/angular-moment.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-     <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script> 
+  <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script> -->
 
 
     <!-- your app's js -->
@@ -56,6 +58,7 @@
     <script src="js/services/artist.js"></script>
     <script src="js/services/service.js"></script>
     <script src="js/services/portfolio.js"></script>
+    <script src="js/services/appointment.js"></script>
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
