--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
     <script src="lib/pubnub-3.7.21.js"></script>
     <script src="lib/pubnub-angular-3.2.1.js"></script>
     <script src="lib/ionic-calendar/dist/js/calendar-tpls.min.js"></script>
-    <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>    
+    <script src="lib/ion-datetime-picker/release/ion-datetime-picker.min.js"></script>
     <script src="lib/ionic-rating/ionic-rating.min.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/angular-moment.min.js"></script>
@@ -43,6 +43,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers/main.js"></script>
     <script src="js/controllers/calendar-schedule.js"></script>
     <script src="js/controllers/dash.js"></script>
     <script src="js/controllers/account.js"></script>
@@ -56,9 +57,12 @@
     <script src="js/controllers/manager-appointment.js"></script>
 
     <script src="js/services/artist.js"></script>
+    <script src="js/services/customer.js"></script>
     <script src="js/services/service.js"></script>
     <script src="js/services/portfolio.js"></script>
     <script src="js/services/appointment.js"></script>
+    <script src="js/services/chat-thread.js"></script>
+    <script src="js/services/chat-message.js"></script>
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
