update my location page

--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-  <!-- <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script> -->
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script>
 
 
     <!-- your app's js -->
