--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/parse-1.6.14.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/pubnub-3.7.21.js"></script>
     <script src="lib/pubnub-angular-3.2.1.js"></script>
     <script src="lib/ionic-calendar/dist/js/calendar-tpls.min.js"></script>
