--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/ionic-calendar/dist/css/calendar.min.css">
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/ion-google-place/ion-google-place.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -35,12 +36,11 @@
     <script src="lib/ionic-rating/ionic-rating.min.js"></script>
     <script src="lib/moment.min.js"></script>
     <script src="lib/angular-moment.min.js"></script>
-
+    <script src="lib/ion-google-place/ion-google-place.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script>
-
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyCorG5ABOzNQKu3OwJ6m5n_6XvOwQN6vHM&libraries=places"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -64,6 +64,7 @@
     <script src="js/services/appointment.js"></script>
     <script src="js/services/chat-thread.js"></script>
     <script src="js/services/chat-message.js"></script>
+    <script src="js/services/review.js"></script>
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
