add image fade-in

--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,8 @@
     <script src="js/services/chat-message.js"></script>
     <script src="js/services/review.js"></script>
     <script src="js/services.js"></script>
+
+    <script src="js/directives/fadeIn.js"></script>
   </head>
   <body ng-app="starter">
     <!--
