add signup page

--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,7 @@
     <script src="js/controllers/dash.js"></script>
     <script src="js/controllers/account.js"></script>
     <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/register.js"></script>
     <script src="js/controllers/chat.js"></script>
     <script src="js/controllers/chat-detail.js"></script>
     <script src="js/controllers/location.js"></script>
